update exp4a's plot

--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -216,7 +216,7 @@ Given the importance of moral character, to successfully navigate in a social wo
 
 To date, however, as Freeman and Ambady (2011) put it, studies in the perception of moral character didn't try to explain the perceptual process, rather, they are trying to explain the higher-order social cognitive processes that come after. Essentially, these studies are perception of moral character without perceptual process. Without knowledge of perceptual processes, we can not have a full picture of how moral character is processed in our cognition. As an increasing attention is paid to perceptual process underlying social cognition, it's clear that perceptual processes are strongly influenced by social factors, such as group-categorization, stereotype (see Bagnis, Celeghin, Mosso, \& Tamietto, 2019; Stolier \& Freeman, 2016; Xiao, Coppin, \& Bavel, 2016). Given the importance of moral character and that moral character related information has strong influence on learning and memory (Carlson, Maréchal, Oud, Fehr, \& Crockett, 2020; Stanley \& De Brigard, 2019), one might expect that moral character related information could also play a role in perceptual process.
 
-To explore the perceptual process of moral character and the underlying mechanism, we conducted a series of experiments to explore (1) whether we can detect the influence of moral character information on perceptual decision-making in a reliable way, and (2) potential explanations for the effect. In the first four experiments, we found a robust effect of good-person prioritization in perceptual decision-making. Then, we explore the potential explanations and tested value-based prioritization versus good-self-based prioritization (social-categorization (Turner, Hogg, Oakes, Reicher, \& Wetherell, 1987; Turner, Oakes, Haslam, \& McGarty, 1994)). These results suggested that people may categorize self and other based on moral character; in these categorizations, the core self, i.e., the good-self, is always prioritized.
+To explore the perceptual process of moral character and the underlying mechanism, we conducted a series of experiments to explore (1) whether we can detect the influence of moral character information on perceptual decision-making in a reliable way, and (2) potential explanations for the effect. In the first four experiments, we found a robust effect of good-person prioritization in perceptual decision-making. Then, we explore the potential explanations and tested value-based prioritization versus good-self based prioritization (social-categorization (Turner, Hogg, Oakes, Reicher, \& Wetherell, 1987; Turner, Oakes, Haslam, \& McGarty, 1994)). These results suggested that people may categorize self and other based on moral character; in these categorizations, the core self, i.e., the good-self, is always prioritized.
 
 \hypertarget{perceptual-process-of-moral-character}{%
 \subsection{Perceptual process of moral character}\label{perceptual-process-of-moral-character}}
@@ -227,7 +227,7 @@ To explore the perceptual process of moral character and the underlying mechanis
 
 An alternative is to use abstract semantic concepts. Abstract concepts of moral character are used to describe and represent moral characters. These abstract concepts may be part of a dynamic network in which sensory cue, concrete behaviors and other information can activate/inhibit each other (e.g., aggressiveness) (Amodio, 2019; Freeman \& Ambady, 2011). If a concept of moral character (e.g., good person) is activated, it should be able to influence on the perceptual process of the visual cues through the dynamic network, especially when the perceptual decision-making is about the concept-cue association. In this case, abstract concepts of moral character may serve as signal of moral reputation (for others) or moral self-concept. Indeed, previous studies used the moral words and found that moral related information can be perceived faster Firestone \& Scholl (2015). If moral character is an important in person perception, then, just as those other information such as races and stereotype (see Xiao, Coppin, \& Bavel, 2016), moral character related concepts also change the perceptual processes.
 
-To investigate the above possibility, we used an associative learning paradigm to study how moral character concept change perceptual decision-making. In this paradigm, simple geometric shapes were paired with different words whose dominant meaning is describing the moral character of a person. Participants first learn the associations between shapes and words, e.g., triangle is a good-person. After formed direct associations between the labels of moral characters and visual cues, participants then perform a perceptual matching task to judge whether the shape-word pair presented on the screen match the association they learned. This paradigm has been used in studying the perceptual process of self-concept, but had also proven useful in studying other concepts like social group (e.g., Enock, Hewstone, Lockwood, \& Sui, 2020). By using simple and morally neutral shapes, we controlled the variations caused by visual cues.
+To investigate the above possibility, we used an associative learning paradigm to study how moral character concept change perceptual decision-making. In this paradigm, simple geometric shapes were paired with different words whose dominant meaning is describing the moral character of a person. Participants first learn the associations between shapes and words, e.g., triangle is a good-person. After formed direct associations between the labels of moral characters and visual cues, participants performed a perceptual matching task to judge whether the shape-word pair presented on the screen match the association they learned. This paradigm has been used in studying the perceptual process of self-concept, but had also proven useful in studying other concepts like social group (e.g., Enock, Hewstone, Lockwood, \& Sui, 2020). By using simple and morally neutral shapes, we controlled the variations caused by visual cues.
 
 Our first question is, whether the words used the in the associative paradigm is really related to the moral character? This assumption is consistent with previous theories, especially the interactive dynamic theory. To validate that moral character concepts activated moral character as a social cue, we used four experiments to explore and validate the paradigm. The first experiment directly adopted associative paradigm and changed labels from ``self,'' ``friend,'' and ``stranger'' to ``good-person,'' ``neutral-person,'' and ``bad-person.'' We further tried semantic labels that have more explicit moral meaning (``kind-person,'' ``neutral-person,'' and ``evil-person''). In the third experiments, as in Anderson, Siegel, Bliss-Moreau, and Barrett (2011), we asked participant to learn the association between three different diagnostic behavior and three different names, and then use the names as moral labels for the associative learning. Finally, we also tested that simultaneously present shape-word pair and sequentially present word and shape didn't change the pattern. All of these four experiments showed a consistent pattern of effect, that is, the visual cues that associated with positive moral character were prioritized.
 
@@ -236,15 +236,15 @@ Our first question is, whether the words used the in the associative paradigm is
 
 {[}possible explanations: person-based self-categorization vs.~stimuli-based valence{]} The robust pattern from the first four experiments revealed a novel pattern that needs an explanation. It's novel because it's contradict with the ``negative is stronger than positive'' hypothesis in social psychology (Baumeister, Bratslavsky, Finkenauer, \& Vohs, 2001). There are two major alternatives. One possible explanation is the value-based attention, which suggested that valuable stimuli is prioritized in our low-level cognitive processes. Because positive moral character is potentially rewarding, e.g., potential cooperators, it is valuable to individuals and therefore being prioritized. Most empirical evidence for value-based attention are from experiments used monetary reward. However, the monetary reward might be different greatly from the morality in social setting. So far, only a few empirical studies supported the value-based attention in social evaluation. XXX found that trustworthy faces attracted attention more than untrustworthy faces, probably because trustworthy faces are more likely to be the collaborative partners subsequent tasks, which will bring reward. Applying this explanation to the current setting need a further assumption that participants automatically view the moral character related information as self-relevant objects. Only based on the objectified stimuli that we evaluate their value (rewarding or threatening) to us (Juechems \& Summerfield, 2019; Reicher \& Hopkins, 2016).
 
-Another possibility is that we will perceive those moral character not as objects but as person, and automatic categorize whether they are in-group or out-group, instead of calculating their value to us. This account assumed that moral character served as a way to categorize other. In the first four experiments' situation, the identity of the moral character is ambiguous, participants may automatically categorize morally good people as in-group and therefore preferentially processed these information.
+Another possibility is that we will perceive those moral character not as objects but as person, and automatic categorize whether they are in-group or out-group, instead of calculating their value to us. This account assumed that moral character served as a way to categorize other. In the first four experiments' situation, the identity of the moral character is ambiguous, participants may automatically categorize morally good people as in-group (as an extension of themselves) and therefore preferentially processed these information.
 
-However, the above four experiments could not distinguish between these two possibilities, because the concept ``good-person'' can both be rewarding and be categorized as in-group member, and previous studies using associative learning paradigm revealed that both rewarding stimuli (e.g., Sui, He, \& Humphreys, 2012) and in-group information {[}enock\_overlap\_2020{]} are prioritized.
+However, the above four experiments could not distinguish between these two possibilities, because the concept ``good-person'' can both be rewarding and be categorized as in-group member, and previous studies using associative learning paradigm revealed that both rewarding stimuli (e.g., Sui, He, \& Humphreys, 2012) and in-group information (Enock, Hewstone, Lockwood, \& Sui, 2020) are prioritized.
 
-{[}Distinguish two explanations by make self salient, exp3a, 3b, 6b{]} Though both two frameworks can account for the positivity effect found in first four experiments (i.e., prioritization of ``good-person,'' but not ``neutral person'' and ``bad person''), they have different prediction if the experiment design include both identity and moral valence where the valence (good, bad, and neutral) conditions can describe both self and other. In this case the identity become salient and participants are less likely to spontaneously identify a good-other as the extension of self, but the value of good-person still exists. Actually, the rewarding value of good-other might be even stronger than good-self because the former indicate potential cooperation and material rewards, but the latter is more linked to personal belief. This means that the social categorization theory predicts participants prioritize good-self but not good-other, while reward-based attention theory predicts participants are both prioritized. Also, as in Hu, Lan, Macrae, and Sui (2020), people may also only identify with good-self instead of bad self. That is, people will show a unique pattern of self-identification: only good-self is identified as ``self'' while all the others categories were excluded.
+{[}Distinguish two explanations by make self salient, exp3a, 3b, 6b{]} Though both two the value-based attention and moral-based categorization accounts can explain the positivity effect found in first four experiments (i.e., prioritization of ``good-person,'' but not ``neutral person'' and ``bad person''), they have different prediction if the experimental design include both identity and moral valence where the valence (good, bad, and neutral) conditions can describe both self and other. In this case the identity become salient and participants are less likely to spontaneously identify a good-other as the extension of self, but the value of good-person still exists. Actually, the rewarding value of good-other might be even stronger than good-self because the former indicate potential cooperation and material rewards, but the latter merely confirmed one's personal belief. This means that the social categorization theory predicts participants prioritize good-self but not good-other, while reward-based attention theory predicts participants are both prioritized, or maybe good-other are even more prioritized. Also, as in Hu, Lan, Macrae, and Sui (2020), people may also only identify with good-self instead of bad self. That is, people will show a unique pattern of self-identification: only good-self is identified as ``self'' while all the others categories were excluded.
 
-In exp 3a, 3b, and 6b, we found that (1) good-self is always faster than neutral-self and bad-self, but good-other only have weak to null advantage to neutral-other and bad-other. which mean the social categorization is self-centered. (2) good-self's advantage over good other only occur when self- and other- were in the same task. i.e.~the relative advantage is competition based instead of absolute. These three experiments suggest that people more like to view the moral character stimuli as person and categorize good-self as an unique category against all others. A mini-meta-analysis showed that there was no effect of valence when the identity is other. This results showed that value-based attention is not likely explained the pattern we observed in first four experiments. Why good-self is prioritized is less clear. Besides the social-categorization explanation, it's also possible that good self is so unique that it is prioritized in all possible situation and therefore is not social categorization \emph{per se}.
+We introduced identity (self vs.~other) as an addition independent variable in exp 3a, 3b, and 6b. Now the moral valence is orthogonal to the identity. We found that (1) good-self is always faster than neutral-self and bad-self, but good-other only have weak to null advantage to neutral-other and bad-other. which mean the social categorization is self-centered. (2) good-self's advantage over good other only occur when self- and other- were in the same task. i.e.~the relative advantage is competition based instead of absolute. These three experiments suggest that people more like to view the moral character stimuli as person and categorize good-self as an unique category against all others. A three-level Bayesian generalized linear mixed effect model showed that there was no effect of valence when the identity was other. This results showed that value-based attention was not likely the mechanism behind the pattern we observed in first four experiments. However, it is still unclear Why good-self was prioritized. Besides the social-categorization explanation, it's also possible that good self is so unique that it is prioritized in all possible situation and therefore is not social categorization \emph{per se}.
 
-{[}what we care? valence of the self exp4a or identity of the good exp4b?{]} We go further to disentangle the good-self complex: is it because the special role of good-self or because of social categorization. We designed two complementary experiments. in experiment 4a, participants only learned the association between self and other, the words ``good-person,'' ``neutral person,'' and ``bad person'' were presented as task-irrelevant stimuli, while in experiment 4b, participants learned the associations between ``good-person,'' ``neutral-person,'' and ``bad-person,'' and the ``self'' and ``other'' were presented as task-irrelevant stimuli. These two experiment can be used to distinguish the ``good-self'' as anchor account and the ``good-self-based social categorization'' account. If good-self as an anchor is true, then, in both experiment, good-self will show advantage over other stimuli. More specifically, in experiment 4a, in the self condition, there will be advantage for good as task-irrelevant condition than the other two self conditions; in experiment 4b, in the good condition, there will be an advantage for self as task-irrelevant condition over other as task-irrelevant condition. If good-self-based social categorization if true, then, the prioritization effect will depends on whether the stimuli can be categorized as the same group of good-self. More specifically, in experiment 4a, there will be good-as-task-irrelevant stimuli than other condition in self conditions, this prediction is the same as the ``good-self as anchor'' account; however, for experiment 4b, there will be no self-as-task-irrelevant stimuli than other-as-task-irrelevant condition.
+{[}what we care? valence of the self exp4a or identity of the good exp4b?{]} We go further to disentangle the good-self complex: is it because the special role of good-self or because of social categorization. We designed two complementary experiments. in experiment 4a, participants only learned the association between self and other, the words ``good-person,'' ``neutral person,'' and ``bad person'' were presented as task-irrelevant stimuli, while in experiment 4b, participants learned the associations between ``good-person,'' ``neutral-person,'' and ``bad-person,'' and the ``self'' and ``other'' were presented as task-irrelevant stimuli. These two experiment can be used to distinguish the ``good-self'' as anchor account and the ``good-self-based social categorization'' account. If good-self as an anchor is true, then, in both experiment, good-self will show advantage over all other stimuli. More specifically, in experiment 4a, where only the self-relevance is task-relevant, there will be advantage for good as task-irrelevant condition than the other two self conditions; in experiment 4b, in the good condition, there will be an advantage for self as task-irrelevant condition over other as task-irrelevant condition. If good-self-based social categorization if true, then, the prioritization effect will depends on whether the stimuli can be categorized as the same group of good-self. More specifically, in experiment 4a, there will be good-as-task-irrelevant stimuli than other condition in self conditions, this prediction is the same as the ``good-self as anchor'' account; however, for experiment 4b, there will be no self-as-task-irrelevant stimuli than other-as-task-irrelevant condition.
 
 {[}Good self in self-reported data{]} As an exploration, we also collected participants' self-reported psychological distance between self and good-person, bad-person, and neutral-person, moral identity, moral self-image, and self-esteem. All these data are available (see Liu et al., 2020). We explored the correlation between self-reported distance and these questionnaires as well as the questionnaires and behavioral data. However, given that the correlation between self-reported score and behavioral data has low correlation (Dang, King, \& Inzlicht, 2020), we didn't expect a high correlation between these self-reported measures and the behavioral data.
 
@@ -449,7 +449,7 @@ For the reaction times, we also found robust effect of moral valence. Shapes ass
 \hypertarget{part-2-interaction-between-valence-and-identity}{%
 \section{Part 2: interaction between valence and identity}\label{part-2-interaction-between-valence-and-identity}}
 
-In this part, we report three experiments (3a, 3b, and 6b) that aimed at testing whether the moral valence effect found in the previous experiments can be modulated by the self-referential processing. These analysis included 108 participants.
+In this part, we report three experiments (3a, 3b, and 6b) that aimed at testing whether the moral valence effect found in the previous experiments is modulated by self-referential processes. These three experiments included data from 108 participants.
 
 \begin{figure}
 \centering
@@ -463,6 +463,16 @@ See Figure \ref{fig:plot-bayes2}.
 \section{Part 3: Implicit binding between valence and identity}\label{part-3-implicit-binding-between-valence-and-identity}}
 
 In this part, we reported two studies in which the moral valence or the self-referential processing is not task-relevant. We are interested in testing whether the task-relevance will eliminate the effect observed in previous experiment.
+
+\begin{figure}
+\centering
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-exp4a-BGLM-1.pdf}
+\caption{\label{fig:plot-exp4a-BGLM}exp4a: Results of Bayesian GLM analysis.}
+\end{figure}
+
+For the task relevant part, we found self-related conditions were performed better than other-related conditions, on both \emph{d} prime and reaction times.
+
+Most importantly, we found evidence, albeit weak, that task-irrelevant moral valence also played an role. The \emph{d} prime is greater when shapes were associated with good self condition than with neutral self (BF = 4.4) or bad self (3.1), but shapes associated with bad self and neutral self didn't show differences. See Figure \ref{fig:plot-exp4a-BGLM}.
 
 \hypertarget{results}{%
 \section{Results}\label{results}}
