--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -435,7 +435,7 @@ fun_rt_val_id <- function(exp_name) {
 In this part, we report results from five experiments that tested whether an associative learning task, including 192 participants. Note that for both experiment 1a and 1b, there were two independent samples with different equipment, trials numbers and testing situation. Therefore, we modeled them as independent samples.  These five experiments revealed a robust effect of moral character on perceptual matching task. 
 
 
-```{r remove non-meta data, echo=FALSE, results='hide', warning=FALSE}
+```{r remove non-meta data, eval = FALSE, echo=FALSE, results='hide', warning=FALSE}
 # remove all unnecessary variables
 var_list <- c('df1a.v_meta', 'df1b.v_meta', 'df1c.v_meta', 'df2.v_meta', 'df3a.v_meta', 'df3b.v_meta',
               'df4a.v_meta', 'df4b.v_meta', 'df5.v_meta', 'df6a.v_meta', 'df6b.v_meta', 'df7a.v_meta', 'df7b.v_meta',
@@ -882,9 +882,9 @@ library(patchwork)
 p_rt1 + p_dprime1 +
         p_rt1_diff + p_dprime1_diff + plot_annotation(tag_levels = 'A')  + plot_layout(nrow = 2, byrow = TRUE)
 
-p <- p_rt1 + p_dprime1 + plot_annotation(tag_levels = 'A') + plot_layout(guides = "collect") 
+# p <- p_rt1 + p_dprime1 + plot_annotation(tag_levels = 'A') + plot_layout(guides = "collect") 
 
-ggsave('part1_plot_posterior.png', p, width = 15, height = 7.5)
+#  ggsave('part1_plot_posterior.png', p, width = 15, height = 7.5)
 ```
 
 For the *d* prime, we found robust effect of moral valence. Shapes associated with positive moral valence ("good person", "kind person" or a name associated with morally good behavioral history) has higher sensitivity (mean = , 95% HDI = ) than shapes associated with neutral condition (mean = , 95% HDI = ), but we did not find differences between shapes associated with negative moral label (mean = , 95% HDI = ) and neutral condition.
@@ -1473,8 +1473,244 @@ See Figure \@ref(fig:plot-bayes2).
 
 In this part, we reported two studies in which the moral valence or the self-referential processing is not task-relevant. We are interested in testing whether the task-relevance will eliminate the effect observed in previous experiment. 
 
-```{r child = "exp4a.rmd", eval=FALSE}
+```{r 4a_BGLMM_sdt, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
+exp_name <- '4a'
+exp4a_sdt_m1 <- fun_sdt_val_id(exp_name)
+
+#summary(exp4a_sdt_m1)    # check summary
+
+# check fixed and varying effect using bayestestR
+# bayestestR::describe_posterior(
+#   exp4a_sdt_m1,
+#   effects = "all",
+#   component = "all",
+#   test = c("p_direction", "p_significance"),
+#   centrality = "all"
+# )
+#pp_check(exp4a_sdt_m1)   # posterior predictive check
+
+# d-prime
+hypothesis(exp4a_sdt_m1, "IdentitySelf:ValenceGood:ismatch > IdentitySelf:ValenceNeutral:ismatch")      # .82
+hypothesis(exp4a_sdt_m1, "IdentitySelf:ValenceGood:ismatch > IdentitySelf:ValenceBad:ismatch")          # .75
+hypothesis(exp4a_sdt_m1, "IdentitySelf:ValenceNeutral:ismatch > IdentitySelf:ValenceBad:ismatch")       # .44
+hypothesis(exp4a_sdt_m1, "IdentityOther:ValenceGood:ismatch > IdentityOther:ValenceNeutral:ismatch")    # .11
+hypothesis(exp4a_sdt_m1, "IdentityOther:ValenceGood:ismatch > IdentityOther:ValenceBad:ismatch")        # .07
+hypothesis(exp4a_sdt_m1, "IdentityOther:ValenceNeutral:ismatch > IdentityOther:ValenceBad:ismatch")     # .39
+
+hypothesis(exp4a_sdt_m1, "IdentitySelf:ValenceGood:ismatch > IdentityOther:ValenceGood:ismatch")        # 1
+hypothesis(exp4a_sdt_m1, "IdentitySelf:ValenceNeutral:ismatch > IdentityOther:ValenceNeutral:ismatch")  # 1
+hypothesis(exp4a_sdt_m1, "IdentitySelf:ValenceBad:ismatch > IdentityOther:ValenceBad:ismatch")          # 1
+
+# hypothesis(exp4a_sdt_m1, "IdentitySelf:ValenceGood > IdentitySelf:ValenceNeutral")  # .73
+# hypothesis(exp4a_sdt_m1, "IdentitySelf:ValenceGood > IdentitySelf:ValenceBad")  # .9
+# hypothesis(exp4a_sdt_m1, "IdentitySelf:ValenceNeutral > IdentitySelf:ValenceBad")  # .49
+# hypothesis(exp4a_sdt_m1, "IdentityOther:ValenceGood > IdentityOther:ValenceNeutral")  # .68
+# hypothesis(exp4a_sdt_m1, "IdentityOther:ValenceGood > IdentityOther:ValenceBad")  # .92
+# hypothesis(exp4a_sdt_m1, "IdentityOther:ValenceNeutral> IdentityOther:ValenceBad")  # .8
+# 
+# hypothesis(exp4a_sdt_m1, "IdentitySelf:ValenceGood > IdentityOther:ValenceGood")  # .92
+# hypothesis(exp4a_sdt_m1, "IdentitySelf:ValenceNeutral > IdentityOther:ValenceNeutral")  # .76
+# hypothesis(exp4a_sdt_m1, "IdentitySelf:ValenceBad > IdentityOther:ValenceBad")  # .96
+
+# extract the population level parameters
+# criteria
+
+df_exp4a_sdt_m1_plot <- exp4a_sdt_m1 %>%
+  tidybayes::gather_draws(`b_.*`, regex = TRUE) %>% # get the traces of population level parameters
+  # create two columns for two independent factors.
+  dplyr::mutate(Valence = dplyr::case_when(grepl("Neutral", .variable) ~ "Neutral",
+                                           grepl("Bad", .variable) ~"Bad",
+                                           grepl("Good", .variable) ~"Good"),
+                Identity = dplyr::case_when(grepl("Self", .variable) ~ "Self",
+                                           grepl("Other", .variable) ~"Other"),
+                params = dplyr::case_when(grepl("ismatch", .variable) ~ "dprime",
+                                           !grepl("ismatch", .variable) ~"criterion"),
+                params = factor(params, levels = c('dprime', 'criterion')),
+                Identity = factor(Identity, levels = c("Self", "Other")),
+                Valence = factor(Valence, levels = c('Good', 'Neutral',  'Bad'))) 
+
+exp4a_sdt_p <- df_exp4a_sdt_m1_plot %>%
+  dplyr::filter(params == 'dprime') %>%  # select only d prime
+  ggplot2::ggplot(aes(x = Identity, y = .value, color = Valence)) +
+  tidybayes::stat_halfeye(aes(fill = Valence), alpha = 0.7) + # position=position_dodge(width = 0.1)
+  # geom_slabinterval(ymin = 0, ymax = 4) +
+  stat_summary(aes(group = Valence, color = Valence), fun = mean, geom = "line") +
+  labs(x = expression("Self-Referential"), 
+      y = expression(paste("Posteior of sensitivity ", italic("d'"), sep = ' '))) +
+  scale_colour_brewer(palette = "Dark2") +
+  scale_fill_brewer(palette = "Dark2") +
+  # facet_grid(~ params , scales = "free_y") +
+  theme_classic() 
+
+# exp4a_sdt_p <- exp4a_sdt_m1 %>%
+#   emmeans::emmeans( ~ ismatch | Identity| Valence) %>%
+#   tidybayes::gather_emmeans_draws() %>%
+#   dplyr::mutate(ismatch = ifelse(ismatch == 0, 'criterion', 'd prime'),
+#                 ismatch = factor(ismatch, levels = c('d prime', 'criterion')),
+#                 Valence = factor(Valence, levels = c('Good', 'Neutral',  'Bad')),
+#                 Identity = factor(Identity, levels = c('Self', 'Other'))) %>%
+#   ggplot2::ggplot(aes(x = Valence, y = .value, group = Identity, color = Identity)) +
+#   #ggplot2::ggplot(aes(x = Valence, y = .value, group = .draw)) +
+#   #geom_line(alpha = .01) +
+#   scale_colour_brewer(palette = "Dark2") +
+#   scale_fill_brewer(palette = "Dark2") +
+#   tidybayes::stat_halfeye() + # position=position_dodge(width = 0.1)
+#   stat_summary(aes(group = Identity, color = Identity), fun.y = mean, geom = "line"
+#                #,position=position_dodge(width = 0.1)
+#                ) +
+#   #scale_fill_brewer() +
+#   facet_grid(~ ismatch) +
+#   theme_classic()
+
+df_exp4a_sdt_m1_plot_diff <- df_exp4a_sdt_m1_plot %>%
+        tidyr::unite(term, c('params', 'Identity', 'Valence')) %>%
+        dplyr::ungroup() %>%
+        dplyr::select(term, `.chain`, `.iteration`, `.draw`, `.value`) %>%
+        tidyr::pivot_wider(names_from = c(term), values_from = .value) %>%   # long to wide
+        dplyr::mutate(
+                # diff_GN_c_S = c_Self_Good - c_Self_Neutral,
+                # diff_BN_c_S = c_Self_Bad - c_Self_Neutral,
+                # diff_GN_c_O = c_Other_Good - c_Other_Neutral,
+                # diff_BN_c_O = c_Other_Bad - c_Other_Neutral,
+                diff_GN_dprm_S = dprime_Self_Good - dprime_Self_Neutral,
+                diff_BN_dprm_S = dprime_Self_Bad - dprime_Self_Neutral,
+                diff_GB_dprm_S = dprime_Self_Good - dprime_Self_Bad,
+                diff_GN_dprm_O = dprime_Other_Good - dprime_Other_Neutral,
+                diff_BN_dprm_O = dprime_Other_Bad - dprime_Other_Neutral,
+                diff_GB_dprm_O = dprime_Other_Good - dprime_Other_Bad,
+                diff_SO_dprm_G = dprime_Self_Good - dprime_Other_Good,
+                diff_SO_dprm_N =  dprime_Self_Neutral - dprime_Other_Neutral,
+                diff_SO_dprm_B =  dprime_Self_Bad - dprime_Other_Bad
+                ) %>%
+  dplyr::select(`.chain`, `.iteration`, `.draw`,
+               diff_GN_dprm_S, diff_BN_dprm_S, diff_GB_dprm_S,
+               diff_GN_dprm_O, diff_BN_dprm_O, diff_GB_dprm_O, 
+               diff_SO_dprm_G, diff_SO_dprm_N, diff_SO_dprm_B) %>%
+  tidyr::pivot_longer(cols = diff_GN_dprm_S:diff_SO_dprm_B, names_to = "term_diff", values_to =  "value") %>%  # wide to long
+  dplyr::mutate(term_diff = factor(term_diff, levels = c('diff_GB_dprm_S', 'diff_GN_dprm_S', 'diff_BN_dprm_S', 
+                                                         'diff_GB_dprm_O', 'diff_GN_dprm_O', 'diff_BN_dprm_O', 
+                                                         'diff_SO_dprm_G', 'diff_SO_dprm_N', 'diff_SO_dprm_B')))
+p_exp4a_dprime1_diff_val <- df_exp4a_sdt_m1_plot_diff %>%
+        dplyr::filter(str_detect(term_diff, '_dprm_S|_dprm_O')) %>%
+        dplyr::mutate(Identity = dplyr::case_when(grepl("_S", term_diff) ~ "Self",
+                                           grepl("_O", term_diff) ~"Other"),
+                      Identity = factor(Identity, levels = c("Self", "Other"))) %>%
+        dplyr::mutate(term_diff = stringr::str_sub(.$term_diff, end = -8)) %>%
+        dplyr::mutate(term_diff = dplyr::case_when(grepl("_GB", term_diff) ~ "Good vs. Bad",
+                                                   grepl("_GN", term_diff) ~"Good vs. Neutral",
+                                                   grepl("_BN", term_diff) ~ "Bad vs. Neutral"),
+                      term_diff = factor(term_diff, levels = c("Good vs. Bad", "Good vs. Neutral", "Bad vs. Neutral"))) %>%
+        # dplyr::filter(str_detect(term_diff, '_SO_')) %>%
+        #dplyr::filter(!str_detect(term_diff, '_GB_')) %>%
+        # tidyr::unite(term_diff, c('Identity', 'term_diff')) %>%
+        dplyr::filter((value >= -1.5) & (value <= 1.5)) %>%
+        dplyr::rename(conditions = term_diff) %>%
+        ggplot2::ggplot(aes(x = value, y = fct_rev(conditions), fill = stat(x > 0))) +
+        tidybayes::stat_halfeye() +
+        geom_vline(xintercept = 0, linetype = "dashed") +
+        scale_fill_manual(values = c('gray80', 'skyblue')) +
+        xlab(expression(paste("Self-referential effect on ", italic("d"), " prime", sep = ' '))) + 
+        facet_wrap( ~ Identity, nrow = 1)
+
+p_exp4a_dprime1_diff_id <- df_exp4a_sdt_m1_plot_diff %>%
+        dplyr::filter(str_detect(term_diff, '_SO_')) %>%
+        dplyr::mutate(term_diff = dplyr::case_when(grepl("_B", term_diff) ~ "Bad",
+                                                   grepl("_N", term_diff) ~"Neutral",
+                                                   grepl("_G", term_diff) ~ "Good"),
+                      term_diff = factor(term_diff, levels = c("Good", "Neutral", "Bad"))) %>%
+        #dplyr::filter(!str_detect(term_diff, '_GB_')) %>%
+        # tidyr::unite(term_diff, c('Identity', 'term_diff')) %>%
+        dplyr::filter((value >= -1.5) & (value <= 1.5)) %>%
+        dplyr::rename(conditions = term_diff) %>%
+        ggplot2::ggplot(aes(x = value, y = fct_rev(conditions), fill = stat(x > 0))) +
+        tidybayes::stat_halfeye() +
+        geom_vline(xintercept = 0, linetype = "dashed") +
+        scale_fill_manual(values = c('skyblue')) +   # note: only one value here, used blue here
+        xlab(expression(paste("Self-referential effect on ", italic("d"), " prime", sep = ' ')))
 ```
+
+```{r 4a_BGLMM_rt, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
+exp_name <- '4a'
+exp4a_rt_m1 <- fun_rt_val_id(exp_name)
+
+# summary(exp4a_rt_m1)  # n
+# 
+# bayestestR::describe_posterior(
+#   exp4a_rt_m1,
+#   effects = "fixed",
+#   component = "all",
+#   test = c("p_direction", "p_significance"),
+#   centrality = "all"
+# )
+
+#pp_check(exp4a_rt_m1)
+# rg <- emmeans::ref_grid(exp4a_rt_m1)
+# em <- emmeans::emmeans(rg, 'ismatch')
+# summary(em, point.est = median)
+# emmeans::joint_tests(exp4a_rt_m1)
+
+df_exp4a_m1_plot_rt <- exp4a_rt_m1 %>%
+        tidybayes::gather_draws(`b_.*`, regex = TRUE)  %>%
+        dplyr::mutate(.variable = gsub("b_", "", .variable)) %>%
+        tidyr::pivot_wider(names_from = c(.variable), values_from = .value) %>%
+        dplyr::mutate(NM_Self_Neutral = Intercept,               # calculate the differences between conditions
+                      NM_Self_Bad = Intercept  + ValenceBad,
+                      NM_Self_Good = Intercept  + ValenceGood ,
+                      NM_Other_Neutral = Intercept  + IdentityOther,               # calculate the differences between conditions
+                      NM_Other_Bad = Intercept  + ValenceBad  + `ValenceBad:IdentityOther`,
+                      NM_Other_Good = Intercept  + ValenceGood + `ValenceGood:IdentityOther`,
+                      M_Self_Neutral = Intercept  + ismatch,
+                      M_Self_Bad = Intercept  + ismatch + `ismatch:ValenceBad`,
+                      M_Self_Good = Intercept  + ismatch + `ismatch:ValenceGood`,
+                      M_Other_Neutral = Intercept  + ismatch + `ismatch:IdentityOther`,
+                      M_Other_Bad = Intercept  + ismatch + `ismatch:IdentityOther` + `ismatch:ValenceBad:IdentityOther`,
+                      M_Other_Good = Intercept  + ismatch + `ismatch:IdentityOther` + `ismatch:ValenceGood:IdentityOther`) %>%
+        dplyr::select(`.chain`, `.iteration`, `.draw`, contains('M_')) %>%
+        tidyr::pivot_longer(cols = NM_Self_Neutral:M_Other_Good, names_to = "term", values_to =  "value") %>%  # wide to long
+  dplyr::mutate(term = factor(term, levels = c('NM_Self_Neutral', 'NM_Self_Bad', 'NM_Self_Good',
+                                               'NM_Other_Neutral', 'NM_Other_Bad', 'NM_Other_Good',
+                                               'M_Self_Neutral', 'M_Self_Bad', 'M_Self_Good',
+                                               'M_Other_Neutral', 'M_Other_Bad', 'M_Other_Good')),
+                value = exp(value),
+                value = value * 1000) 
+
+p_exp4a_rt1 <- df_exp4a_m1_plot_rt %>%
+        tidyr::separate(term, c('Match', 'Identity', 'Valence')) %>% 
+        dplyr::mutate(Valence = factor(Valence, levels = c('Good', 'Neutral', 'Bad')),
+                      Identity = factor(Identity, levels = c("Self", "Other"))) %>%
+        dplyr::filter(Match == 'M') %>%
+        # dplyr::rename(Experiments = condition) %>%
+        dplyr::filter((value >=200) & (value <=1200)) %>%
+        ggplot2::ggplot(aes(y = value, x = Identity, color = Valence)) +
+        tidybayes::stat_halfeye(aes(fill = Valence), alpha = 0.7) +
+        stat_summary(aes(group = Valence, color = Valence), fun = mean, geom = "line") +
+        # geom_vline(data = p_ms_rt1_vlines, aes(xintercept = value, colour = Valence), linetype = "dashed") +
+        labs(x = expression("Self-Referential"), 
+             y=expression('Posteior of reaction times')) +
+        scale_colour_brewer(palette = "Dark2") +
+        scale_fill_brewer(palette = "Dark2") +
+        # facet_grid(~ params , scales = "free_y") +
+        theme_classic()
+        # facet_wrap(~Identity) + 
+        #theme_apa()
+# 
+# emm1 <- emmeans::emmeans(exp4a_rt_m1, specs = pairwise ~ Identity | Valence | ismatch)
+# emm1$contrasts %>% summary(infer = TRUE, point.est = mean)
+# 
+# emm2 <- emmeans::emmeans(exp4a_rt_m1, specs = pairwise ~ Valence | Identity | ismatch)
+# emm2$contrasts %>% summary(infer = TRUE, point.est = mean)
+
+```
+
+```{r plot-exp4a-BGLM, fig.cap="exp4a: Results of Bayesian GLM analysis.",  fig.height=4.5, fig.width=9, warning=FALSE}
+library(patchwork)
+p_exp4a_rt1 + exp4a_sdt_p + plot_annotation(tag_levels = 'A')  + plot_layout(nrow = 1, byrow = FALSE, guides = "collect") 
+```
+
+For the task relevant part, we found self-related conditions were performed better than other-related conditions, on both *d* prime and reaction times.
+
+Most importantly, we found evidence, albeit weak, that task-irrelevant moral valence also played an role. The *d* prime is greater when shapes were associated with good self condition than with neutral self (BF = 4.4) or bad self (3.1), but shapes associated with bad self and neutral self didn't show differences. See Figure \@ref(fig:plot-exp4a-BGLM).
+
 
 ```{r child = "exp4b.rmd", eval=FALSE}
 ```
